--- a/data/application.rb.tt
+++ b/data/application.rb.tt
@@ -1,12 +1,12 @@
 require 'rubygems'
-require 'bundler/setup'
+require 'sequel-reporter'
 
 module <%= @name.capitalize %>
   class Application < Sequel::Reporter::Application
     # Set this to the URL for your database. Remember to
     # uncomment the correct gem in the Gemfile for your
     # sequel adapter.
-    #set :database_url, ENV['DATABASE_URL']
+    set :database_url, 'sqlite:///'
 
     # Set this to the report that should be used for your index
     set :index_report, :dashboard
